# brain

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RESEARCH.md  cliff.toml  dist-workspace.toml  justfile  marketplace.json  mise.toml
crates/brain_core/: Cargo.toml
crates/brain_core/src/: brain.rs  error.rs  lib.rs  metrics.rs  uri.rs  utils.rs
crates/brain_core/src/ports/: embed.rs  mock.rs  mod.rs
crates/brain_daemon/: Cargo.toml
crates/brain_daemon/src/: config.rs  dispatcher.rs  entry.rs  handlers.rs  lib.rs  main.rs  server.rs
crates/brain_daemon/src/watcher/: control.rs  handle.rs  instance.rs  mod.rs  registry.rs  routing.rs  shutdown.rs  supervisor.rs
crates/brain_daemon/tests/: architecture.rs  binary_smoke.rs  concurrent_clients.rs  round_trip.rs  tasks_list_e2e.rs  watcher_supervisor.rs
crates/brain_daemon/tests/common/: mod.rs
crates/brain_embedder/: Cargo.toml
crates/brain_embedder/src/: lib.rs
crates/brain_lib/: Cargo.toml  clippy.toml
crates/brain_lib/benches/: latency.rs
crates/brain_lib/src/: capsule.rs  chunker.rs  config.rs  consolidation.rs  dedup.rs  doctor.rs  embedder.rs  error.rs  fs_permissions.rs  git.rs  hash_gate.rs  hierarchy.rs  indexing_tests.rs  l0_abstract.rs  l0_generate.rs  lib.rs  links.rs  llm.rs  lod.rs  lod_resolver.rs  metrics.rs  pagerank.rs  parser.rs  pipeline.rs  providers.rs  query_pipeline.rs  ranking.rs  retrieval.rs  scanner.rs  search_service.rs  store.rs  stores.rs  summarizer.rs  tokens.rs  uri.rs  utils.rs  watcher.rs  work_queue.rs
crates/brain_lib/src/config/: mod.rs  paths.rs
crates/brain_lib/src/db/: chunks.rs  files.rs  fts.rs  jobs.rs  links.rs  meta.rs  migration_harness.rs  mod.rs  schema.rs  summaries.rs
crates/brain_lib/src/ipc/: client.rs  mod.rs  protocol.rs  router.rs  server.rs  sync_client.rs  tests.rs
crates/brain_lib/src/mcp/: mod.rs  protocol.rs  tools.rs
crates/brain_lib/src/pipeline/: consolidation.rs  embed_poll.rs  indexing.rs  job_worker.rs  maintenance.rs  mod.rs  recurring_jobs.rs  scan.rs
crates/brain_lib/src/ports/: mock.rs  mod.rs
crates/brain_lib/src/records/: capsule.rs  events.rs  integrity.rs  mod.rs  objects.rs  projections.rs  queries.rs
crates/brain_lib/src/sagas/: lifecycle.rs  mod.rs  status.rs
crates/brain_lib/src/tags/: clustering.rs  mod.rs  recluster.rs
crates/brain_lib/src/tasks/: capsule.rs  cross_brain.rs  cycle.rs  enrichment.rs  events.rs  import_beads.rs  mod.rs  projections.rs  queries.rs
crates/brain_lib/tests/: consolidation_tests.rs  dedup_tests.rs  federated_search_tests.rs  golden_tests.rs  graph_expansion_tests.rs  hierarchy_tests.rs  indexing_tests.rs  l0_tests.rs  mcp_handler_tests.rs  mcp_test_harness.rs  pagerank_integration_tests.rs  perf_tests.rs  pipeline_tests.rs  procedure_tests.rs  property_tests.rs  records_tests.rs  retrieval_tests.rs  retrieve_acceptance_tests.rs  smoke_tests.rs  tags_clustering_integration_test.rs  tags_mcp_surface_test.rs  task_transfer_tests.rs  tasks_only_smoke.rs  uri_mcp_tests.rs  workspace_tests.rs
crates/brain_mcp/: Cargo.toml
crates/brain_mcp/src/: context.rs  dispatch.rs  entry.rs  handle.rs  lib.rs  main.rs  protocol.rs  saga_validation.rs  server.rs
crates/brain_mcp/src/tools/: brains_list.rs  helpers.rs  jobs_status.rs  links_add.rs  links_for_entity.rs  links_remove.rs  mem_consolidate.rs  mem_reflect.rs  mem_retrieve.rs  mem_summarize_scope.rs  mem_walk_thread.rs  mem_write_episode.rs  mem_write_procedure.rs  mod.rs  record_archive.rs  record_create_analysis.rs  record_create_document.rs  record_create_plan.rs  record_fetch_content.rs  record_get.rs  record_link.rs  record_list.rs  record_save_snapshot.rs  record_search.rs  record_tag.rs  saga_add_tasks.rs  saga_cancel.rs  saga_close.rs  saga_create.rs  saga_frontier.rs  saga_get.rs  saga_list.rs  saga_remove_tasks.rs  saga_reopen.rs  saga_start.rs  saga_stats.rs  saga_update.rs  status.rs  tags_aliases_list.rs  tags_aliases_status.rs  (+11 more)
crates/brain_mcp/tests/: registry_smoke.rs  tools_smoke.rs
crates/brain_mcp/tests/common/: mod.rs
crates/brain_memory/: Cargo.toml
crates/brain_memory/src/: consolidate.rs  context.rs  lib.rs  reflect.rs  retrieve.rs  summarize_scope.rs  walk_thread.rs  write_episode.rs  write_procedure.rs
crates/brain_persistence/: Cargo.toml
crates/brain_persistence/src/: derived_summaries.rs  error.rs  job_results.rs  lib.rs  links.rs  pagerank.rs  sql.rs  store.rs  tokens.rs  trust.rs  utils.rs
crates/brain_persistence/src/db/: chunks.rs  comparator.rs  crypto.rs  files.rs  (+16 more)
crates/brain_persistence/tests/: migration_v42_fixture_test.rs  migration_v43_fixture_test.rs  migration_v44_fixture_test.rs  migration_v49_fixture_test.rs  migration_v50_fixture_test.rs  migration_v51_fixture_test.rs  migration_v52_fixture_test.rs  outgoing_blocks_orphan.rs
crates/brain_records/: Cargo.toml
crates/brain_records/src/: domain.rs  events.rs  integrity.rs  lib.rs  objects.rs  projections.rs  queries.rs  store.rs
crates/brain_retrieval/: Cargo.toml
crates/brain_retrieval/src/: capsule.rs  domain.rs  hierarchy.rs  lib.rs  lod.rs  lod_resolver.rs  ports.rs  query_pipeline.rs  ranking.rs  retrieval.rs
crates/brain_rpc/: Cargo.toml
crates/brain_rpc/src/: client.rs  domain.rs  lib.rs  spawner.rs  testing.rs  transport.rs  unix.rs
crates/brain_rpc/tests/: architecture.rs  client_in_memory.rs  client_unix.rs  connect_or_spawn.rs
crates/brain_sagas/: Cargo.toml
crates/brain_sagas/src/: domain.rs  lib.rs  lifecycle.rs  status.rs
crates/brain_tags/: Cargo.toml
crates/brain_tags/src/: clustering.rs  domain.rs  lib.rs  recluster.rs
crates/brain_tasks/: Cargo.toml
crates/brain_tasks/src/: capsule.rs  cycle.rs  domain.rs  enrichment.rs  events.rs  filtering.rs  import_beads.rs  lib.rs  projections.rs
crates/cli/: Cargo.toml  build.rs  clippy.toml
crates/cli/src/: dispatch.rs  main.rs  markdown_table.rs
crates/cli/tests/: hooks_integration.rs  integration.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  embedder.rs  error.rs  lib.rs  store.rs
(+403 files in other folders)
