[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

# Optimize candle crates in dev builds for usable embedding speed.
# opt-level 1 enables SIMD vectorization with minimal compile-time cost.
[profile.dev.package.candle-core]
opt-level = 1

[profile.dev.package.candle-nn]
opt-level = 1

[profile.dev.package.candle-transformers]
opt-level = 1
