[workspace]
resolver = "2"
members = ["crates/brain_lib", "crates/cli"]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.33", features = ["bundled"] }
blake3 = "1"
ulid = "1"
chrono = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
toml = "0.8"
dirs = "6"

# Optimize candle crates in dev builds for usable embedding speed.
# opt-level 1 enables SIMD vectorization with minimal compile-time cost.
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package.candle-core]
opt-level = 1

[profile.dev.package.candle-nn]
opt-level = 1

[profile.dev.package.candle-transformers]
opt-level = 1
