[package]
name = "brain-daemon"
version.workspace = true
edition.workspace = true

# cargo-dist: do NOT publish brain-daemon as its own release / Homebrew
# formula. The `brain-daemon` binary is shipped by the `brain` cli crate
# (see crates/cli/Cargo.toml — it declares a forwarder `[[bin]]` that
# routes to `brain_daemon::run_cli`). One Homebrew formula, two binaries,
# guaranteed-coherent versions. See US-009 in the brn-2fe.26 PRD.
[package.metadata.dist]
dist = false

[features]
default = []
# Exposes mock implementations of the `Dispatcher` port for tests in
# downstream consumers. Mirrors the test-utils pattern from brain-rpc /
# brain-tasks / brain-sagas.
test-utils = []
# Activates the file-watcher supervisor module + its transitive deps.
# Off by default to keep the daemon's dep graph lean when only RPC dispatch is needed
# (e.g. for hosts that don't need file watching).
embed = [
    "brain-lib/embed",
    "dep:notify-debouncer-full",
    "dep:tokio-util",
    "dep:tracing",
]

[[bin]]
name = "brain-daemon"
path = "src/main.rs"

# Architectural ratchet — see crates/brain_daemon/src/lib.rs doc comment.
#
# brain_rpc stays the wire contract; its decoupling from internal
# storage is the load-bearing invariant. brain_daemon now hosts real
# Request handlers backed by BrainStores, so brain_lib / brain_persistence
# / brain_tasks are allowed here. They are restricted to the handler
# impl files (handlers.rs) — port-layer files (config.rs, dispatcher.rs)
# remain framework-free.
#
# brain-lib pulls in the candle embedder via its default `embed` feature.
# The daemon is the long-lived process where embedder weights live (the
# CLI is short-lived), so it makes architectural sense to load candle
# here rather than in every CLI invocation. This is required for the
# memory_retrieve / memory_reflect handlers — they call
# `brain_memory::{retrieve, reflect}` over a `SemanticContext` borrowed
# from the daemon's bootstrapped `brain_lib::mcp::McpContext` (until
# brain_lib::mcp leaves in PR2 and the resource holder is renamed).
#
# `tokio` (current-thread runtime only) is needed by the memory handlers
# to drive the async query pipeline to completion from this otherwise-
# sync dispatcher. Kept minimal — no macros, no multi-thread runtime —
# to avoid bloating the daemon's dep tree.
[dependencies]
brain-rpc = { path = "../brain_rpc" }
brain-lib = { path = "../brain_lib" }
brain-memory = { path = "../brain_memory" }
brain-persistence = { path = "../brain_persistence" }
brain-tasks = { path = "../brain_tasks" }
brain-records = { path = "../brain_records" }
brain-sagas = { path = "../brain_sagas" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
# Optional deps activated by the `embed` feature. Both are only used by
# the `watcher` supervisor module (file-watching + debounce, cancellation
# token plumbing for shutdown).
notify-debouncer-full = { version = "0.7", optional = true }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
# Used by tests/architecture.rs to parse Cargo.toml and gate forbidden
# DIRECT deps. brain_daemon's allowed-direct-dep set is narrower than
# brain_rpc's (we let brain-lib / brain-persistence / brain-tasks in to
# host real handlers, but rusqlite / lancedb / candle / the not-yet-
# allowed domain crates remain forbidden directly).
toml = { workspace = true }
# Self-reference activates the `test-utils` feature for integration tests
# in `tests/*.rs` — same pattern as brain-rpc / brain-tasks.
brain-daemon = { path = ".", features = ["test-utils"] }
