[package]
name = "brain-lib"
version.workspace = true
edition.workspace = true

[features]
default = []
accelerate = ["candle-core/accelerate"]

[dependencies]
brain-persistence = { path = "../brain_persistence" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
# ML inference (embeddings)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"
futures = "0.3"
serde_json = { workspace = true }
# Directory traversal (ignore crate respects .gitignore)
walkdir = "2"
ignore = "0.4"
blake3 = { workspace = true }
ulid = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
# File watching
notify-debouncer-full = "0.7"
# Markdown parsing
pulldown-cmark = "0.12"
serde_yaml = "0.9"
regex = "1"
toml = { workspace = true }
dirs = { workspace = true }
nanoid = { workspace = true }
base64 = "0.22"
zstd = "0.13"
tempfile = "3"
async-trait = { workspace = true }
reqwest = { workspace = true }
dashmap = "6"

# Enable Accelerate (Apple BLAS) on macOS for ~2x faster embeddings.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["accelerate"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
proptest = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
wiremock = "0.6"

[[bench]]
name = "latency"
harness = false
