[package]
name = "brain-lib"
version.workspace = true
edition.workspace = true

[features]
default = ["embed"]
# Compiles the BGE-small-en-v1.5 candle embedder and exposes the
# `brain_lib::embedder` alias + the `Embedder` prelude re-export. Disabling
# `embed` (via `--no-default-features`) drops the entire candle stack
# (candle-core/nn/transformers + tokenizers) from the build and leaves the
# indexing pipeline in soft-gated "tasks-only" mode at runtime — the read
# path's existing `McpContext::bootstrap` gate is mirrored at the write
# path via `IndexPipeline::tasks_only`.
embed = ["dep:brain-embedder"]
# `accelerate` implies `embed` — Apple's BLAS only meaningfully accelerates
# the BGE-small candle path, so requesting one without the other has no
# sensible interpretation. The `?` qualifier on the forwarded feature is a
# belt-and-suspenders against feature unification edge cases.
accelerate = ["embed", "brain-embedder?/accelerate"]
# Exposes test-only accessors (e.g. BrainStores::db_for_tests) and the
# matching brain-persistence seed helpers. Enable from integration tests
# that need direct DB access; not for production use.
test-utils = ["brain-persistence/test-utils", "brain-core/test-utils", "brain-memory/test-utils", "brain-records/test-utils", "brain-retrieval/test-utils", "brain-sagas/test-utils", "brain-tags/test-utils", "brain-tasks/test-utils"]

[dependencies]
brain-core = { path = "../brain_core" }
brain-embedder = { path = "../brain_embedder", optional = true }
brain-mcp = { path = "../brain_mcp" }
brain-memory = { path = "../brain_memory" }
brain-persistence = { path = "../brain_persistence" }
brain-records = { path = "../brain_records" }
brain-retrieval = { path = "../brain_retrieval" }
brain-sagas = { path = "../brain_sagas" }
brain-tags = { path = "../brain_tags" }
brain-tasks = { path = "../brain_tasks" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
serde_json = { workspace = true }
# Directory traversal (ignore crate respects .gitignore)
walkdir = "2"
ignore = "0.4"
blake3 = { workspace = true }
ulid = { workspace = true }
serde = { workspace = true }
# File watching
notify-debouncer-full = "0.7"
# Markdown parsing
pulldown-cmark = "0.12"
serde_yaml = "0.9"
regex = "1"
toml = { workspace = true }
dirs = { workspace = true }
nanoid = { workspace = true }
base64 = "0.22"
zstd = "0.13"
tempfile = "3"
async-trait = { workspace = true }
reqwest = { workspace = true }
dashmap = "6"
lru = "0.12"
# Pure-Rust git repository discovery (used by `git::common_dir` to resolve the
# shared `.git` directory across linked worktrees). gix-hash is a transitive
# of gix-discover but requires an explicit hash-backend feature.
gix-discover = "0.51"
gix-hash = { version = "0.25", features = ["sha1"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
proptest = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
ulid = { workspace = true }
wiremock = "0.6"
# Self-reference activates the `test-utils` feature for integration tests in
# `tests/*.rs`. Cargo compiles `brain-lib` as a regular dependency for those
# tests (cfg(test) = false), so without this dep the items gated by
# `#[cfg(any(test, feature = "test-utils"))]` are invisible. The feature
# chains `brain-persistence/test-utils` and `brain-core/test-utils`, which
# exposes: `db_for_tests()` accessors, `crate::ports::mock` (re-exports
# the cross-crate mocks from brain_core::ports::mock and
# brain_persistence::ports::mock), and the persistence seed helpers.
# Production builds don't pull dev-dependencies, so the gate still keeps
# these out of shipped binaries.
brain-lib = { path = ".", features = ["test-utils"] }

[[bench]]
name = "latency"
harness = false
