[package]
name = "brain-retrieval"
version.workspace = true
edition.workspace = true

[features]
default = ["embed"]
# Pulls in the candle-backed embedder helper (`embed_batch_async`). Mirrors
# the same gate in `brain-lib` and `brain-tags`; disabling `embed` via
# `--no-default-features` substitutes a stub that errors at runtime. Every
# reachable call site sits behind an upstream `Option<Arc<dyn Embed>>`
# soft-gate, so the stub is unreachable in practice.
embed = ["dep:brain-embedder"]
# Exposes test-only items (mocks re-exported from upstream crates).
test-utils = [
    "brain-persistence/test-utils",
    "brain-core/test-utils",
    "brain-tasks/test-utils",
    "brain-records/test-utils",
    "brain-tags/test-utils",
]

[dependencies]
brain-core = { path = "../brain_core" }
brain-embedder = { path = "../brain_embedder", optional = true }
brain-persistence = { path = "../brain_persistence" }
brain-tasks = { path = "../brain_tasks" }
brain-records = { path = "../brain_records" }
brain-sagas = { path = "../brain_sagas" }
brain-tags = { path = "../brain_tags" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }
# `query_pipeline` uses `futures::future::join_all` for federated parallel
# queries. Pinned to 0.3 to match the workspace siblings (brain_lib,
# brain_persistence).
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
# Tests use rusqlite::params! to seed fixtures directly into the in-memory
# Db's connection. rusqlite stays a dev-dep — production retrieval code
# never names rusqlite types.
rusqlite = { workspace = true }
# Self-reference activates the `test-utils` feature for integration tests in
# `tests/*.rs`. Cargo compiles `brain-retrieval` as a regular dependency for
# those tests (cfg(test) = false), so without this the upstream mocks gated
# by `#[cfg(any(test, feature = "test-utils"))]` would be invisible.
brain-retrieval = { path = ".", features = ["test-utils"] }
