[package]
name = "brain-tasks"
version.workspace = true
edition.workspace = true

[features]
default = ["embed"]
# Compiles the parts of `brain_tasks` that depend on the candle embedder
# (task capsule generation). Mirrors the same gate in `brain-lib`; disabling
# `embed` (via `--no-default-features`) drops the capsule module from the
# build entirely. The capsule module is only reached from upstream indexing
# pipeline code that already soft-gates on an `Option<Arc<dyn Embed>>` slot,
# so the no-embed compile is safe.
embed = ["dep:brain-embedder"]
# Exposes test-only items (mocks re-exported from upstream crates). Chains
# both `brain-persistence/test-utils` and `brain-core/test-utils`, matching
# the pattern in `brain-lib`.
test-utils = ["brain-persistence/test-utils", "brain-core/test-utils"]

[dependencies]
brain-core = { path = "../brain_core" }
brain-embedder = { path = "../brain_embedder", optional = true }
brain-persistence = { path = "../brain_persistence" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
# Self-reference activates the `test-utils` feature for integration tests
# in `tests/*.rs` — same pattern as `brain-lib`. Cargo compiles `brain-tasks`
# as a regular dependency for those tests (cfg(test) = false), so without
# this the upstream mocks gated by `#[cfg(any(test, feature = "test-utils"))]`
# would be invisible.
brain-tasks = { path = ".", features = ["test-utils"] }
