[package]
name = "brain"
version.workspace = true
edition.workspace = true
repository = "https://github.com/benediktms/brain"
description = "A local-first personal second brain with token-budgeted retrieval for AI agents"
homepage = "https://github.com/benediktms/brain"

[[bin]]
name = "brain"
path = "src/main.rs"

[features]
default = ["embed"]
# Surfaces the embed-dependent subcommands (`watch`, `backfill-tasks`,
# `memory`, `tags recluster`) and links the candle embedder. Disabling
# `embed` (via `--no-default-features`) drops those subcommands entirely —
# `brain --help` won't list them and `brain watch` errors with
# "unrecognized subcommand". Mirrors the gate in `brain-lib`.
embed = ["brain-lib/embed"]
# `accelerate` implies `embed` for the same reason it does in brain-lib:
# Apple's BLAS only meaningfully accelerates the BGE-small candle path, and
# without `embed` the cli would forward accelerate to brain-lib but never
# register the subcommands that actually use it.
accelerate = ["embed", "brain-lib/accelerate"]

[dependencies]
brain-lib = { path = "../brain_lib", default-features = false }
brain-persistence = { path = "../brain_persistence" }
brain-records = { path = "../brain_records" }
brain-tasks = { path = "../brain_tasks" }
tokio = { workspace = true, features = ["signal", "net"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
libc = "0.2"
dirs = "6"
notify-debouncer-full = "0.7"
blake3 = { workspace = true }

[dev-dependencies]
# Re-declares brain-lib with the `test-utils` feature so cli's unit tests can
# reach `brain_lib::ports::mock::*` without relying on workspace-wide feature
# unification. Cargo merges this with the entry in `[dependencies]` only for
# tests/examples/benches; the release binary still builds against the lean
# `default-features = false` view.
brain-lib = { path = "../brain_lib", default-features = false, features = ["test-utils"] }
assert_cmd = "2.2.0"
predicates = "3.1.4"
rusqlite = { workspace = true }
tempfile = "3.26.0"
